kubernetes_deployment/yaml_files/myservice1_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myservice1
  template:
    metadata:
      labels:
        app: myservice1
    spec:
      containers:
        - image: coudertalex/myservice1:6
          imagePullPolicy: IfNotPresent
          name: myservice1
          ports:
          - containerPort: 3000
      restartPolicy: Always
