kubernetes_deployment/yaml_files/myservice2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myservice2
  template:
    metadata:
      labels:
        app: myservice2
    spec:
      containers:
        - image: coudertalex/myservice2:2
          imagePullPolicy: IfNotPresent
          name: myservice2
          ports:
          - containerPort: 4000
      restartPolicy: Always
