kubernetes_deployment/yaml_files/myservice1_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice1
spec:
  selector:
    app: myservice1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
    #- nodePort: 31280
  type: LoadBalancer
