kubernetes_deployment/yaml_files/myservice2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice2
spec:
  selector:
    app: myservice2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4000
    #- nodePort: 31280
  type: LoadBalancer
